tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_string.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
def compare_str_isnot() :
    n = 'hello world'
    a = 'hello world'
    return n is not a
